--- a/components/Common/BottomNav/BottomNav.module.css
+++ b/components/Common/BottomNav/BottomNav.module.css
@@ -34,3 +34,11 @@
 .link :hover{
     color: red;
 }
+
+
+@media only screen and (min-width: 768px){
+    .bottomNav{
+        display: none;
+    }
+
+}
