--- a/components/Common/Navbar/Navbar.module.css
+++ b/components/Common/Navbar/Navbar.module.css
@@ -1,10 +1,10 @@
 .navbar{
     margin: 0;
-    padding: 0;
+    padding-top: 0.2rem;
     display: flex;
-    height: 50x;
-    width: 100%;
-    position: fixed;
+    height: 50px;
+    width: 100vw;
+    position:sticky;
     background-color: rgb(255, 255, 255);
     box-shadow: 0.5px 1px #b3afaf;
     top:0;
@@ -17,14 +17,16 @@ cursor: pointer;
 }
 .navbarLeft{
     flex: 50%;
+    width: auto;
     display: flex;
     justify-content: left;
     align-items: center;
-
 }
 
 .navbarLeft .links{
     padding-left: 15px;
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +34,7 @@ cursor: pointer;
 }
 
 .navbar .links img{
+
     margin-top: 4px;
     padding-left: 12px;
     padding-right: 12px; ;
@@ -39,6 +42,7 @@ cursor: pointer;
 }
 
 .navbarRight{
+    width: auto;
     flex: 50%;
     display: flex;
     justify-content: flex-end;
@@ -47,6 +51,7 @@ cursor: pointer;
 }
 
 .navbarRight .links{
+    width: auto;
     padding-right: 15px;
     display: flex;
     justify-content: space-between;
@@ -54,6 +59,7 @@ cursor: pointer;
 }
 
 .navbarRight .links .refer{
+    width: auto;
     padding: 2px 10px;
     align-items: center;
     text-align: center;
@@ -63,6 +69,7 @@ cursor: pointer;
     color: rgb(60, 58, 58);
 
 }
+
 
 .navbarRight .links a{
     text-decoration: none;
@@ -82,4 +89,41 @@ cursor: pointer;
     padding: 0 1rem;
     align-items: center;
     justify-content: center;
+}
+
+
+.navbarCenter{
+    display: flex;
+    align-items: center;
+    color: #5b5959;
+
+}
+
+
+
+.searchInput{
+    display: block;
+    width: 300px;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    margin-left: 1rem;
+    color: #504d4d;
+}
+
+.menuIcon {
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+.navbarCenter {
+    display: none;
+}
+
+.menuIcon {
+    display: block;
+}
+
 }
