--- a/components/Common/Content/Content.module.css
+++ b/components/Common/Content/Content.module.css
@@ -1,8 +1,8 @@
 .contentContainer{
-    display:block;
     background-color: rgb(255, 255, 255);
-    width: 100vw;
+    width: 100%;
     height: 80%;
+    top: 80px;
     align-items: center;
     justify-content: center;
 }
@@ -61,7 +61,6 @@
 
 .cards{
     display: flex;
-
     overflow-x: scroll;
 
 }
@@ -85,4 +84,3 @@
   }
 
 
-  
