--- a/components/Common/Navbar/Navbar.module.css
+++ b/components/Common/Navbar/Navbar.module.css
@@ -3,8 +3,8 @@
     padding-top: 0.2rem;
     display: flex;
     height: 50px;
-    width: 100vw;
-    position:sticky;
+    width: 100%;
+    position:fixed;
     background-color: rgb(255, 255, 255);
     box-shadow: 0.5px 1px #b3afaf;
     top:0;
