--- a/components/Common/Cards/Cards.module.css
+++ b/components/Common/Cards/Cards.module.css
@@ -1,7 +1,8 @@
 .cardContainer{
-
-    width: 20%;
-    margin:  3px;
+    width: auto;
+    height: auto;
+    display: block;
+    margin:  10px;
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
     border: 0.1px solid rgb(197, 181, 181);
@@ -35,11 +36,9 @@
     padding: 4px;
   }
 
-
   @media only screen and (max-width: 768px){
-    .cardContainer{
-
-        width: 40%;
-        height: 40%;
+    .image{
+        width: 100%;
+        height: 150px;
     }
   }
