--- a/components/Common/Content/Content.module.css
+++ b/components/Common/Content/Content.module.css
@@ -1,86 +1,111 @@
-.contentContainer{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 80%;
-    top: 80px;
-    align-items: center;
-    justify-content: center;
+.contentContainer {
+  float: right;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 6px;
+  position: relative;
+  min-width: 100%;
+  width: 100%;
 }
 
+.leftScroll {
+  background-color: rgb(255, 255, 255);
+  position: fixed;
+  top: -131px;
+  right: 0;
+  bottom: -100px;
+  left: 0;
+  z-index: 1;
+  width: var(--app-drawer-width, 225px);
+  padding: 155px 0 100px 0;
+  overflow: scroll;
+  margin: 0;
+  margin-top: 0px;
+  float: left;
+  margin-top: 37px;
+  border-right: 1px solid #eee;
+}
 
-
-.categoryBar{
-    width: auto;
-    display: flex;
-    overflow-x: scroll;
+.contentRight {
+  width: 82%;
+  float: right;
+  padding-left:  1rem;
+  margin-top: 65px;
+  position: relative;
+  min-height: 400px;
+}
+.categoryBar {
+  width: auto;
+  display: flex;
+  overflow-x: scroll;
 }
 
 .categoryBar::-webkit-scrollbar {
-    display: none;
-  }
-
-.bannerContainer{
-    width: auto;
-    text-align: center;
-
-
+  display: none;
 }
 
-
-.feeds{
-    padding: 0.5rem;
-}
-.feedHeader{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.bannerContainer {
+  width: auto;
+  text-align: center;
 }
 
-.tileContainer{
-    margin: 0.4rem;
-    padding: 0.3rem;
-    width: auto;
-    height: auto;
-    background-color: #dedede;
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    color: rgb(0, 0, 0);
+.feeds {
+  padding: 0.5rem;
+}
+.feedHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.tile{
-    display: flex;
-
+.tileContainer {
+  margin: 0.4rem;
+  padding: 0.3rem;
+  width: auto;
+  height: auto;
+  background-color: #dedede;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  color: rgb(0, 0, 0);
 }
 
-.tile:hover{
-    cursor: pointer;
+.tile {
+  display: flex;
 }
 
-.cards{
-    display: flex;
-    overflow-x: scroll;
+.tile:hover {
+  cursor: pointer;
+}
 
+.cards {
+  display: flex;
+  overflow-x: scroll;
 }
 
 .cards::-webkit-scrollbar {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .categoryBar {
     display: none;
-
   }
 
+  .bannerContainer {
+    margin-top: 2rem;
+  }
+}
 
 
-  @media only screen and (min-width: 768px) {
-    .categoryBar{
+@media only screen and (max-width: 768px){
+    .leftScroll{
         display: none;
-
     }
 
-    .bannerContainer{
-        margin-top: 2rem;
+    .contentRight{
+        width: 100%;
     }
-  }
-
-
+}
