--- a/components/Common/Footer/Footer.module.css
+++ b/components/Common/Footer/Footer.module.css
@@ -1,50 +1,40 @@
 .footerContainer{
+    margin-top: 2rem;
     height: 80%;
-    margin-top:1 rem;
+    
 }
 
-.goldTitle{
-    text-align: center;
-}
-.nojotoGold{
-
+.goldMain{
     align-items: center;
+    justify-content: center;
     text-align: center;
-    padding: 0rem 2rem;
 }
 
-.goldTitle{
-    margin: 2rem;
-}
-
-.goldFeatures{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-}
 
 .features{
+
     display: flex;
-    padding: 2rem;
-}
-
-.trendingTopics{
-    margin-top: 2rem;
-}
-
-.trendingTitle{
-    font-weight: 600;
-}
-
-.topics{
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 1.5rem;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-
+    margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-    .goldFeatures{
+
+@media only screen and (max-width: 768px) {
+
+    .features{
         flex-direction: column;
+        justify-content: space-around;
     }
+
+    .benefitsList{
+        margin-bottom: 1rem;
+    }
+
+    .bl_dt{
+        margin-top: 0.5rem;
+    }
+
 }
