--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -3,3 +3,9 @@
     justify-content: space-between;
 }
 
+@media only screen and (max-width: 768px){
+
+    .desktopNav{
+        display: none;
+    }
+}
