--- a/components/Common/Footer/Footer.module.css
+++ b/components/Common/Footer/Footer.module.css
@@ -1,40 +1,128 @@
-.footerContainer{
-    margin-top: 2rem;
-    height: 80%;
-    
+.footerContainer {
+  margin-top: 2rem;
+  height: 80%;
 }
 
-.goldMain{
-    align-items: center;
-    justify-content: center;
+.goldMain {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.nojoto_number {
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin: 15px 0 15px 0;
+}
+
+.nojoto_number > img {
+  width: 22%;
+  text-align: center;
+}
+
+.nojoto_number > h4 {
+  text-align: center;
+  font-weight: 500;
+  font-size: 17px;
+  margin-bottom: 15px;
+}
+
+.goldMain > h3 {
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.features {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 1.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.trendingTopics {
+  margin: 2rem auto;
+}
+
+.topics {
+  text-align: center;
+  display: inline-block;
+  margin: 2rem auto;
+  float: none;
+  padding: 0;
+  list-style-type: none;
+  width: 100%;
+  line-height: 30px;
+}
+
+.trendingTopics > h2 {
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.nojoto_number>ul {
+  float: left;
+  width: 100%;
+  list-style-type: none;
+  margin: 15px 0;
+}
+
+.nojoto_number >ul >li {
+  display: inline-block;
+  width: 32%;
+}
+
+.nojoto_number >ul >li >div.counting {
+    display: inline-block;
+    width: auto;
+    font-size: 42px;
+    font-weight: bold;
     text-align: center;
-}
+  }
 
+  .nojoto_number >ul >li >span:nth-child(2) {
+    font-size: 42px;
+    font-weight: 500;
+    display: inline-block;
+  }
 
-.features{
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 1.5rem;
+.nojoto_number >ul >li >span {
+    display: block;
     text-align: center;
-    margin-bottom: 1rem;
-}
-
+    font-weight: 500;
+    font-size: 18px;
+  }
 
 @media only screen and (max-width: 768px) {
+  .features {
+    flex-direction: column;
+    justify-content: space-around;
+  }
 
-    .features{
-        flex-direction: column;
-        justify-content: space-around;
-    }
+  .benefitsList {
+    margin-bottom: 1rem;
+  }
 
-    .benefitsList{
-        margin-bottom: 1rem;
-    }
+  .bl_dt {
+    margin-top: 0.5rem;
+  }
 
-    .bl_dt{
-        margin-top: 0.5rem;
-    }
+
+  .nojoto_number >ul >li >span:nth-child(2) {
+    font-size: 30px;
+    font-weight: 300;
+    display: inline-block;
+  }
+
+
+  .nojoto_number >ul >li >span {
+    display: block;
+    text-align: center;
+    font-weight: 300;
+    font-size: 12px;
+  }
+
 
 }
