--- a/components/Common/Navbar/Navbar.module.css
+++ b/components/Common/Navbar/Navbar.module.css
@@ -30,16 +30,29 @@ cursor: pointer;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
-.navbar .links img{
-
-    margin-top: 4px;
-    padding-left: 12px;
-    padding-right: 12px; ;
-    height: 35px;
+.rightLinks{
+    padding-left: 15px;
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
+
+.desktopLinks{
+    margin-right: 1rem;
+    padding-left: 15px;
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
 
 .navbarRight{
     width: auto;
@@ -55,10 +68,9 @@ cursor: pointer;
     padding-right: 15px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
-.navbarRight .links .refer{
+.refer{
     width: auto;
     padding: 2px 10px;
     align-items: center;
@@ -71,15 +83,7 @@ cursor: pointer;
 }
 
 
-.navbarRight .links a{
-    text-decoration: none;
-    color: rgb(107, 106, 106);
 
-}
-
-.navbarRight .links a :hover{
-    color: red;
-}
 
 .hide-list{
     display: none;
@@ -112,18 +116,49 @@ cursor: pointer;
     color: #504d4d;
 }
 
+.button {
+    background-color: rgb(239, 14, 14);
+    border: none;
+    color: aliceblue;
+    height: 2rem;
+    width: 5rem;
+    font-weight: 400;
+    font-size: 1rem;
+    margin-left: 0.5rem;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.button:hover{
+    cursor: pointer;
+}
+
+.refer:hover{
+    cursor: pointer;
+    color: rgb(255, 3, 33);
+}
+
 .menuIcon {
     display: none;
 }
 
 @media only screen and (max-width: 768px) {
 
-.navbarCenter {
+.navbarCenter, .desktopLinks {
     display: none;
 }
 
-.menuIcon {
+.menuIcon, .links {
     display: block;
 }
 
+}
+
+@media only screen and (min-width: 768px){
+    .rightLinks{
+        display: none;
+    }
 }
