--- a/components/Common/Sidebar/Sidebar.module.css
+++ b/components/Common/Sidebar/Sidebar.module.css
@@ -6,7 +6,7 @@
     bottom: -100px;
     left: 0;
     z-index: 1;
-    width: var(--app-drawer-width, 400px);
+    width: 70vw;
     padding: 155px 0 100px 0;
     overflow: scroll;
     margin: 0;
