--- a/components/Common/Cards/Cards.module.css
+++ b/components/Common/Cards/Cards.module.css
@@ -1,5 +1,5 @@
 .cardContainer{
-    width: auto;
+    max-width: auto;
     height: auto;
     display: block;
     margin:  10px;
@@ -40,5 +40,9 @@
     .image{
         width: 100%;
         height: 150px;
+    }
+
+    .cardContainer{
+        font-size: 14px;
     }
   }
