--- a/components/Common/DesktopNav/DesktopNav.module.css
+++ b/components/Common/DesktopNav/DesktopNav.module.css
@@ -1,7 +1,88 @@
 
-.desktopNav{
-        width: 30%;
-        top: 200px;
+.leftScroll {
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: -131px;
+    right: 0;
+    bottom: -100px;
+    left: 0;
+    z-index: 1;
+    width: 20vw;
+    padding: 155px 0 100px 0;
+    overflow: scroll;
+    margin: 0;
+    margin-top: 0px;
+    float: left;
+    margin-top: 37px;
+    border-right: 1px solid #eee;
+  }
+
+  .menuItem{
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    font-size:0.9rem;
+    background-color: #efefef;
+
+
+}
+
+.menuItem .text{
+    color: rgb(0, 0, 0);
+    margin-left: 1rem;
+  }
+
+  .menuItem .Icon{
+    color: #504d4d;
+    align-items: center;
+    padding: 0.2;
+  }
+
+  .listItem{
+    display: flex;
+    align-items: center;
+    font-size: small;
+    margin-bottom: 1rem;
+    padding: 0rem 2rem;
+  }
+  
+  .listItem .text{
+      margin-left: 1rem;
+  }
+
+
+  .menuItem .text{
+    color: rgb(0, 0, 0);
+
+    margin-left: 1rem;
+
+  }
+
+  .menuItem .Icon{
+    color: #504d4d;
+    align-items: center;
+    padding: 0.2;
+  }
+
+
+  .listItemContainer:hover{
+    cursor: pointer;
+    background-color: #dedede;
+  }
+
+  .menuItem:hover{
+    cursor: pointer;
+    background-color: #dedede;
+  }
+
+  .menuItem .Icon:hover{
+    color: rgb(239, 14, 14);
+
+  }
+
+  @media only screen and (max-width: 768px){
+    .leftScroll{
         display: none;
-        background-color: aquamarine;
     }
+  }
