--- a/components/Common/Cards/Cards.module.css
+++ b/components/Common/Cards/Cards.module.css
@@ -1,48 +1,70 @@
-.cardContainer{
-    max-width: auto;
-    height: auto;
-    display: block;
-    margin:  10px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 4px;
-    border: 0.1px solid rgb(197, 181, 181);
+.cardContainer {
+    width: 30%;
+  height: 470px;
+  min-height: 470px;
+  display: block;
+  float: left;
+  z-index: -2;
+  margin: 5px 1% 1.65% 1%;
+  background-color: #fff;
+  min-height: 470px;
+  color: rgb(0, 0, 0);
+  border-radius: 5px;
+  box-shadow: 0 0 1px #666;
 }
 
-.title{
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3rem;
+}
+
+.titleLeft {
+  display: flex;
+}
+
+.profileImage {
+  padding: 2px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.imageContainer {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 340px;
+    position: relative;
+    z-index: 0;
+    background-color: #000;
+    width: 100%;
+
 }
 
-.titleLeft{
-    display: flex;
+.image{
+    object-fit: contain;
+    margin: 0 auto;
+
 }
 
-.profileImage{
-    padding:  2px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+.details {
+  padding: 4px;
 }
 
-.imageContainer{
-    margin:  3px 0px;
-}
-
-
-.details{
-    padding: 4px;
-  }
-
-  @media only screen and (max-width: 768px){
+@media only screen and (max-width: 900px) {
     .image{
-        width: 100%;
-        height: 150px;
-    }
+    object-fit: contain;
+    overflow-x: hidden;
 
-    .cardContainer{
-        font-size: 14px;
-    }
+
   }
+
+  .cardContainer {
+    width: 40%;
+    font-size: 14px;
+    margin:  4px 1rem;
+  }
+}
