--- a/components/Common/Content/Profile.module.css
+++ b/components/Common/Content/Profile.module.css
@@ -188,8 +188,12 @@
 }
 
 @media only screen and (max-width: 850px) {
-  .portfolioDetails > ul > li {
-    margin: 0px 20px;
+  .portfolioDetails {
+    margin: 0px 30px;
+  }
+
+  .portfolioDetails > ul > li{
+    margin: 0rem 1rem;
   }
 
   .TabbedPanelsTab {
