--- a/components/Common/Content/Topics.module.css
+++ b/components/Common/Content/Topics.module.css
@@ -1,34 +1,207 @@
-.TopicsContainer{
-    display: inline-block;
-    margin: 2rem auto;
-    float:left;
-    padding: 0;
-    list-style-type: none;
-    width: 78vw;
+.collectionHeader {
+  float: left;
+  width: 99%;
+  height: auto;
+  background-color: rgb(242, 241, 241);
+  color: #000000;
+  position: relative;
+  font-size: 13px;
+  text-align: left;
+  margin: 24px 0 0 0;
 }
 
-.TopicsContainer >ul{
-    box-sizing: border-box;
-    list-style: none;
-    overflow: scroll;
+.topicsAction {
+  clear: both;
+  margin: 20px 15px 8px 0;
+  float: right;
+  color: #000;
+  font-size: 13px;
+  text-align: left;
 }
 
-.TopicsContainer {
+.topicsAction > button {
+  border: 1px solid #f5292a;
+  padding: 4px 18px 5px 12px;
+  margin: 7px 5px 0 0;
+  background-color: #fff;
+  color: #f5292a;
+  line-height: normal;
+  height: 30px !important;
+  font-size: 13px !important;
+  border-radius: 17px;
+  float: right;
+}
 
-    float: left;
-    margin: 5px 1% 1.65% 1%;
-    min-height: 250px;
-    color: rgb(0, 0, 0);
-    position: relative;
+.tags_icon {
+  float: left;
+  width: 75px;
+  height: 75px;
+  margin: 12px 10px 13px 12px;
+  border-radius: 5px;
+}
+
+.tags_icon > img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.collectionEdit_feed {
+  display: block;
+  width: 78%;
+  padding: 0;
+  margin: 0;
+  color: #000;
+  border: 0;
+  border: 0;
+  font-size: 13px;
+  text-align: left;
+}
+
+.collectionEdit_feed > h1 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #000;
+  text-align: left;
+  margin: 5px 0 0 102px;
+  line-height: 36px;
+  padding: 3px 0 0;
+}
+
+.collectionEdit_feed > p {
+  margin: 15px 0 0 103px;
+  max-height: inherit;
+  font-size: 15px;
+  font-weight: 400;
+  color: #333;
+  text-align: left;
+}
+
+.collection_detials {
+  margin: 10px 0 15px 6px !important;
+  width: 80%;
+  list-style-type: none;
+  padding: 0 !important;
+  float: left !important;
+}
+
+.collection_detials > li {
+  color: #666;
+  font-weight: 500;
+  float: left;
+  padding: 0;
+  margin: 10px 20px 0 0;
+}
+
+.postDetialLabels {
+  padding: 8px 0 0 10px;
+  border-top: 2px solid #ffffff;
+  float: left;
+  width: 100%;
+}
+
+.postDetialLabels > h2 {
+  margin: 10px 0 0 5px;
+  font-size: 18px;
+  padding: 0;
+  width: auto;
+  display: inline-block;
+  color: #454545;
+  font-weight: 500;
+  text-align: left;
+}
+
+.postDetialLabels > ul {
+  width: 100%;
+  margin: 20px 0 0 0;
+  list-style: none;
+}
+
+
+
+.tablePannels {
+  clear: none;
+
+  width: 100%;
+  background-color: transparent;
+  color: #000;
+  border: 0;
+  border: 0;
+  font-size: 13px;
+  text-align: left;
+}
+
+.pannelNav {
+  padding: 0;
+  margin: 0;
+  border: none !important;
+  float: left;
+  width: 99%;
+  position: relative;
+  background: #fff;
+  list-style-type: none;
+}
+
+.TabbedPanelsTab {
+  background: 0 0;
+  color: #5b5a5a;
+  border-left: 1px solid #ababab;
+  border-right: 1px solid #ababab;
+  margin: 0 -1px 0 0;
+  font-weight: 700;
+  padding: 9px 40px;
+  float: left;
+  position: relative;
+  list-style: none;
+}
+
+.TabbedPanelsContent {
+ 
+  display: inline-block;
+  margin: 2rem auto;
+  float:left;
+  padding: 0;
+  list-style-type: none;
+  width: 78vw;
+}
+
+.TabbedPanelsContent > ul {
+  box-sizing: border-box;
+  list-style: none;
+}
+
+.TabbedPanelsContent > ul > li {
+  float: left;
+  min-height: 250px;
+  color: rgb(0, 0, 0);
+  position: relative;
+}
+
+.items {
+  display: inline-block;
+  width: auto;
+}
+
+.topicsAction > button:hover {
+  color: #fff;
+  background-color: #f5292a;
+}
+
+
+
+@media only screen and (max-width: 850px) {
+  .portfolioDetails {
+    margin: 0px 30px;
   }
 
-
-  @media only screen and (max-width: 880px){
-    .TopicsContainer{
-        width: 100vw;
-    }
-
-    .TopicsContainer {
-        margin: 0px auto 1.65% auto;
-    }
+  .portfolioDetails > ul > li{
+    margin: 0rem 1rem;
   }
+
+  .TabbedPanelsTab {
+    padding: 9px 30px;
+  }
+
+  .TabbedPanelsContent{
+    width: 100vw;
+  }
+}
