--- a/components/Tiles/Tiles.module.css
+++ b/components/Tiles/Tiles.module.css
@@ -14,8 +14,9 @@
     background: linear-gradient(to bottom,#f9f9f9 0%,#ededed 100%);
       background-color: rgba(0, 0, 0, 0);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9',endColorstr='#ededed',GradientType=0);
-    font-size: 1rem;
+    font-size: 13px;
     text-transform: capitalize;
+    font-weight: 600;
     border-radius: 20px;
 }
 
