--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,9 @@ a {
 
 
 .contentContainer {
+
   float: right;
-  margin-top: 0;
+  margin-top: 60px;
   margin-left: 0;
   margin-right: 6px;
   position: relative;
@@ -29,7 +30,6 @@ a {
 
 .contentRight {
   width: 80vw;
-
   float: right;
   padding-left:  1rem;
   margin-top: 65px;
