--- a/components/Common/LiveCard/LiveCards.module.css
+++ b/components/Common/LiveCard/LiveCards.module.css
@@ -1,12 +1,15 @@
 .cardContainer {
   width: 23%;
+
   min-height: 400px;
   display: block;
   float: left;
   z-index: -2;
+  font-size: 13px;
   margin: 5px 1% 1.65% 1%;
   background-color: #fff;
-  color: #666;
+
+  color : #666;
   border-radius: 5px;
   box-shadow: 0 0 1px #666;
 }
@@ -20,14 +23,6 @@
 
 .titleLeft {
   display: flex;
-  justify-content: space-between;
-  margin-left: 5px;
-}
-
-
-
-.titleLeft > p{
- margin-left: 10px;
 }
 
 .profileImage {
@@ -57,6 +52,31 @@
   padding: 4px;
 }
 
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff512f;
+  color: #fff;
+  font-weight: 500;
+  height: 50px;
+  border-radius: 0px 0px 5px 5px;
+  -webkit-border-radius: 0px 0px 5px 5px;
+  -moz-border-radius: 0px 0px 5px 5px;
+  -ms-border-radius: 0px 0px 5px 5px;
+  -o-border-radius: 0px 0px 5px 5px;
+
+  background: rgb(255,81,47);
+background: linear-gradient(90deg, rgba(255,81,47,1) 0%, rgba(251,101,41,1) 52%, rgba(240,150,26,1) 100%);
+}
+
+.button > span {
+  font-size: 30px;
+  margin-right: 1.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+}
+
 @media only screen and (max-width: 900px) {
   .image {
     object-fit: contain;
@@ -65,7 +85,7 @@
 
   .cardContainer {
     width: 40%;
-    font-size: 13px;
+    font-size: 14px;
     margin: 4px 1rem;
   }
 }
