--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,16 @@ a {
   min-height: 400px;
 }
 
+hr{
+  height: 2px;
+  background-color: #e3e3e3;
+  border: none;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
 
 @media only screen and (max-width: 870px){
 
