--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,11 +12,11 @@ a {
 
 * {
   box-sizing: border-box;
+  
 }
 
 
 .contentContainer {
-
   float: right;
   margin-top: 60px;
   margin-left: 0;
@@ -32,7 +32,7 @@ a {
   width: 80vw;
   float: right;
   padding-left:  1rem;
-  margin-top: 65px;
+  margin-top: 10%;
   position: relative;
   min-height: 400px;
 }
