--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ a {
 
 .contentContainer {
   float: right;
-  margin-top: 60px;
+  top: 30px;
   margin-left: 0;
   margin-right: 6px;
   position: relative;
