--- a/components/Common/BottomNav/BottomNav.module.css
+++ b/components/Common/BottomNav/BottomNav.module.css
@@ -1,6 +1,6 @@
 .bottomNav{
     margin-top: 1rem;
-
+    z-index: 13;
     padding: 1rem;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px -2px 3px #b3afaf;
