--- a/components/Common/Content/Post.module.css
+++ b/components/Common/Content/Post.module.css
@@ -1,5 +1,5 @@
 .heading {
-  margin: 15px 0 0 0;
+  margin: 2rem 0 0 0;
   text-align: center;
   white-space: pre-wrap;
   word-wrap: break-word;
@@ -75,7 +75,6 @@
   display: flex;
   align-items: center;
   color: #333;
-
   cursor: pointer;
   font-weight: 600;
   overflow: hidden;
@@ -157,8 +156,9 @@
   border-radius: 5px;
 }
 
-.bottom{
-  position: absolute;
+.bottom {
+  margin-top: 100px;
+  width: 100%;
   bottom: 0;
 }
 
@@ -167,21 +167,32 @@
   align-items: center;
   justify-content: flex-start;
   margin-bottom: 1rem;
-  
-
-
 }
 
-.reacts{
+.reacts {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
   margin-bottom: 1rem;
+}
+
+.reacts > div {
+  display: flex;
   font-weight: 500;
   color: #333;
-  font-size: 14px;
+  font-size: 10px;
 }
 
-.loveComment{
+.reactDivL {
   margin-right: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.reactDivR {
+  margin-left: 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -195,12 +206,140 @@
   font-size: 14px;
 }
 
+.userInput {
+  display: flex;
+  align-items: center;
+}
+
+.userComment {
+  display: flex;
+  align-items: center;
+  width: 82.5% !important;
+}
+
+.comment {
+  width: 100%;
+  background-color: #f6f5f5;
+  padding: 7px;
+  font-size: 15px;
+  border: 0;
+  overflow: auto !important;
+  margin: 10px 10px !important;
+  border-radius: 20px;
+  outline: none;
+}
+
 .follow > button:hover {
   background-color: #f5292a;
   color: #fff;
 }
 
-
-.Love:hover{
+.reactDivL:hover {
   color: #f5292a;
+  cursor: pointer;
+}
+
+.reactDivR:hover {
+  color: #f5292a;
+  cursor: pointer;
+}
+
+.moreLikeThis {
+  width: 80%;
+}
+
+.cards {
+  width: 125%;
+  background: 0 0;
+  color: #5b5a5a;
+  margin: 0 -1px 0 0;
+  margin-top: 2rem;
+  font-weight: 700;
+  padding: 9px 40px;
+  float: left;
+  list-style: none;
+}
+
+.mobile {
+  width: 100vw !important;
+  height: 100vh !important;
+  z-index: 12;
+  background-color: #000;
+  position: fixed;
+  color: #f6f5f5;
+}
+
+.header {
+  padding: 0.5rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.headerR {
+  display: flex;
+}
+
+.refer {
+  width: auto;
+  padding: 2px 10px;
+  align-items: center;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.mobileUserDetails {
+  display: flex;
+  align-items: center;
+  margin: 0.5rem;
+}
+
+.mobileUserDetails .userName {
+  color: #fff;
+}
+
+.mobileUserDetails .portfolioAction {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
+.mobileUserDetails .follow > button {
+  border: 1px solid #d1d1d1;
+  padding: 4px 18px 5px 12px;
+  background-color: #000;
+  color: #ffffff;
+  line-height: normal;
+  height: 30px !important;
+  font-size: 13px !important;
+  border-radius: 17px;
+}
+
+.mobileUserDetails.follow > button:hover {
+  background-color: #f5292a;
+  color: #fff;
+}
+
+.mobile .mainContent {
+  display: flex;
+  position: fixed;
+  z-index: -1;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 70%;
+}
+
+@media only screen and (max-width: 870px) {
+  .desktop {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 870px) {
+  .mobile {
+    display: none;
+  }
 }
