--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -12,9 +12,7 @@ a {
 
 * {
   box-sizing: border-box;
-  
 }
-
 
 .contentContainer {
   float: right;
@@ -24,23 +22,20 @@ a {
   position: relative;
   min-width: 100%;
   width: 100%;
-
-  bottom: 80px;
+  height: 80%;
 }
 
 .contentRight {
-  
   width: 80vw;
   float: right;
-  padding-left:  1rem;
+  padding-left: 1rem;
   margin-top: 10%;
   position: relative;
   min-height: 400px;
-  bottom: 50px;
-
+  bottom: 10px;
 }
 
-hr{
+hr {
   height: 2px;
   background-color: #e3e3e3;
   border: none;
@@ -51,18 +46,15 @@ hr{
   -o-border-radius: 6px;
 }
 
-@media only screen and (max-width: 870px){
-
-
-  .contentRight{
-      width: 100%;
-      
+@media only screen and (max-width: 870px) {
+  .contentRight {
+    width: 100%;
   }
 }
 
-@media only screen and (min-width: 870px){
-  .contentRight{
+@media only screen and (min-width: 870px) {
+  .contentRight {
     margin-top: 5%;
     bottom: 0;
-}
+  }
 }
