--- a/components/Common/Cards/Cards.module.css
+++ b/components/Common/Cards/Cards.module.css
@@ -21,13 +21,12 @@
 .titleLeft {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-left: 5px;
 }
 
-
-
-.titleLeft > p{
- margin-left: 10px;
+.titleLeft > p {
+  margin-left: 10px;
 }
 
 .profileImage {
@@ -48,13 +47,30 @@
   width: 100%;
 }
 
-.image {
-  object-fit: contain;
+.imageContainer .image {
+  object-fit: cover;
+  width: 100%;
   margin: 0 auto;
 }
 
 .details {
-  padding: 4px;
+  padding: 1rem;
+}
+
+.details > h3 {
+  margin-bottom: 4px;
+  color: #000;
+  font-weight: 500;
+  font-size: 15px;
+  margin-bottom: 3px;
+  max-height: 42px;
+  line-height: 20px;
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;
+  min-height: 40px;
+  white-space: normal;
+  line-height: 20px;
 }
 
 @media only screen and (max-width: 900px) {
@@ -64,8 +80,8 @@
   }
 
   .cardContainer {
-    width: 40%;
-    font-size: 13px;
-    margin: 4px 1rem;
+    width: 47%;
+    margin: 8px 1.5% 0 1.5%;
+    display: inline-block;
   }
 }
