--- a/components/Common/LiveCard/LiveCards.module.css
+++ b/components/Common/LiveCard/LiveCards.module.css
@@ -1,8 +1,8 @@
 .cardContainer {
   width: 23%;
-
+ min-width: 23%;
   min-height: 400px;
-  display: block;
+  display: inline-block;
   float: left;
   z-index: -2;
   font-size: 13px;
@@ -23,7 +23,17 @@
 
 .titleLeft {
   display: flex;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 5px;
 }
+
+.titleLeft > p {
+  margin-left: 10px;
+}
+
 
 .profileImage {
   padding: 2px;
@@ -43,8 +53,10 @@
   width: 100%;
 }
 
-.image {
-  object-fit: contain;
+.imageContainer .image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   margin: 0 auto;
 }
 
@@ -84,8 +96,8 @@ background: linear-gradient(90deg, rgba(255,81,47,1) 0%, rgba(251,101,41,1) 52%,
   }
 
   .cardContainer {
-    width: 40%;
-    font-size: 14px;
-    margin: 4px 1rem;
+    width: 47%;
+    margin: 8px 1.5% 0 1.5%;
+    display: inline-block;
   }
 }
